--- a/Literatur.bib
+++ b/Literatur.bib
@@ -282,6 +282,22 @@
   url    = {http://manpages.ubuntu.com/manpages/bionic/man1/aha.1.html},
 }
 
+@WWW{kube-stress,
+  author   = {Giantswarm},
+  date     = {2020-07-07},
+  title    = {kube-stresscheck},
+  url      = {https://github.com/giantswarm/kube-stresscheck},
+  subtitle = {Script to check Kubernetes nodes on stress (CPU/RAM) resistance.},
+}
+
+@WWW{k8s-qos,
+  author = {The Kubernetes Authors},
+  date   = {2021-05-20},
+  editor = {The Kubernetes Authors},
+  title  = {Kubernetes Configure Quality of Service for Pods},
+  url    = {https://kubernetes.io/docs/tasks/configure-pod-container/quality-service-pod/},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
